Finished intermediate report

--- a/Annexes.tex
+++ b/Annexes.tex
@@ -3,6 +3,9 @@
 \subsubsection*{Planning de projet}
 \subsubsection*{Fiches techniques}
 
+%Planning
+\textbf{Planning}
+
 %Anneau de LEDs
 \textbf{Anneau de LEDs Adafruit NeoPixel Ring, Berrybase}
 
@@ -47,7 +50,10 @@
 \newline \textbf{Mise en plan du support des pieds}
 \newline \textbf{Mise en plan du support de la tête de lecture}
 
-\iffalse
+\iftrue
+
+  %Planning
+  \includepdf[pages=-]{Annexes/2022-03-28 Planning.pdf}
 
   %Anneau de LEDs
   \includepdf[pages=-]{Annexes/anneau de Led.pdf}
@@ -55,27 +61,27 @@
   % Boitier et composants d'alimentation
   \includepdf[pages=-]{Annexes/Boitier alimentation}
   \includepdf[pages=-]{Annexes/Arret d'urgence}
-  \includepdf[pages=-]{Annexes/Bouton d'alimentation}
+  \includepdf[pages={1,3-7}]{Annexes/Bouton d'alimentation}
   \includepdf[pages=-]{Annexes/Bouton lumineux}
   \includepdf[pages=-]{Annexes/Convertisseur AC-DC 48V}
   \includepdf[pages=-]{Annexes/Convertisseur 48V-5V}
 
   % Encodeur
-  \includepdf[pages=-]{Annexes/Encodeur TMCS-20}
-  \includepdf[pages=-]{Annexes/Montage encodeur}
+  \includepdf[pages={1,4-7}]{Annexes/Encodeur TMCS-20}
+  \includepdf[pages={1-12}]{Annexes/Montage encodeur}
 
   % Roulements
-  \includepdf[pages=-]{Annexes/Roulement SKF W 61700 X-2RS1}
+  \includepdf[pages={1-3}]{Annexes/Roulement SKF W 61700 X-2RS1}
 
   % Moteur linéaire
   \includepdf[pages=-]{Annexes/Moteur lineaire}
 
   % Driver Moteur
-  \includepdf[pages=-]{Annexes/EPOS4-Module-Compact}
+  \includepdf[pages={1,10,18,25-37,46-65}]{Annexes/EPOS4-Module-Compact}
 
   % Règle linéaire
-  \includepdf[pages=-]{Annexes/Montage regle lineaire}
-  \includepdf[pages=-]{Annexes/Tete de lecture}
+  \includepdf[pages={1,4-7,11,13}]{Annexes/Montage regle lineaire}
+  \includepdf[pages={1,4-5,7-9,}]{Annexes/Tete de lecture}
 
   % Pieds réglables
   \includepdf[pages=-]{Annexes/Pieds reglable}
