--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -1,6 +1,6 @@
 \section{Description du problème}\label{sec:DescProb}
 Le mandataire, la \acrshort{Heig} ou plus particulièrement l'\acrshort{iAi}, souhaiterait disposer d'une maquette de démonstration pour les différents événements qui servent à présenter l'école. Elle aimerait pouvoir montrer un exemple classique de régulation avec un pendule inversé.
-Il convient de développer, assembler et faire fonctionner la maquette du pendule inversé pour les événements à venir. Le pendule est libre en rotation autour d'un axe et l'équilibre doit être obtenu par déplacement linéaire selon un seul axe. Le pendule demandé est représenté dans la figure \ref{fig:Illustration}
+Il convient de développer, assembler et faire fonctionner la maquette du pendule inversé pour les événements à venir. Le pendule est libre en rotation autour d'un axe et l'équilibre doit être obtenu par déplacement linéaire selon un seul axe. Le pendule demandé est représenté dans la figure \ref{fig:Illustration}.
 
 \begin{figure}[H]
     \centering
@@ -10,7 +10,7 @@ Il convient de développer, assembler et faire fonctionner la maquette du pendul
 \end{figure}
 
 \section{Cas d'utilisation}\label{sec:CasUtil}
-Lors des événements de la HEIG-VD, les visiteurs peuvent intéragir avec la maquette de plusieurs manières. Une interface est présente et permet d'effectuer des opérations variées mais il est aussi possible de déstabiliser le pendule pour observer comment il arrive à se rattraper. Un affichage permettrait d'observer comment la régulation fonctionne en temps réel.
+Lors des événements de la HEIG-VD, les visiteurs peuvent interagir avec la maquette de plusieurs manières. Une interface est présente et permet d'effectuer des opérations variées mais il est aussi possible de déstabiliser le pendule pour observer comment il arrive à se rattraper. Un affichage permettrait d'observer comment la régulation fonctionne en temps réel.
 La figure \ref{fig:CasUtil} illustre ce cas d'utilisation typique.
 
 \begin{figure}[H]
@@ -127,7 +127,7 @@ Les fonctions sont disposées dans un diagramme FAST (c.f. Figure \ref{fig:AnalF
 
 \subsection{Segway}
 
-L'exemple de pendule inversé le plus connu est le Segway \cite{Segway} qui utilise les perturbations des utilisateurs comme indications de la direction dans laquelle il est censé se diriger. Ainsi en essayant de garder l'équilibre il permet le déplacement de ses utilisateurs.
+L'exemple de pendule inversé le plus connu est le Segway \cite{Segway} qui utilise les perturbations des utilisateurs comme indications de la direction dans laquelle il est censé se diriger. Ainsi, en essayant de garder l'équilibre, il permet le déplacement de ses utilisateurs.
 
 \begin{figure}[H]
     \centering
@@ -150,8 +150,9 @@ Le suivant est un projet Instructables avec des éléments assez simples et peu 
     \label{fig:Instructables}
 \end{figure}
 
-On peut voir qu'une courroie est utilisée pour déplacer le chariot qui est guidé par des tubes en PVC et des roulements à billes. La mesure de l'angle, de la vitesse angulaire et de l'accélération angulaire du pendule se fait à l'aide d'un capteur d'inertie placé au bout de la tige.
-Le pendule de chez Quanser est plus précis et possède une réponse plus rapide aux perturbations grâce au matériel plus couteux utilisé pour le fabriquer. Il est aussi utilisé pour éduquer les utilisateurs sur la régulation bien qu'à un niveau plus avancé, spécifiquement dans un milieu universitaire.
+On peut voir qu'une courroie est utilisée pour déplacer le chariot qui est guidé par des tubes en PVC et des roulements à billes. La mesure de l'angle, de la vitesse angulaire et de l'accélération angulaire du pendule se fait à l'aide d'un capteur d'inertie placé au bout de la tige.\\
+
+Le pendule de chez Quanser est plus précis et possède une réponse plus rapide aux perturbations grâce au matériel plus coûteux utilisé pour le fabriquer. Il est aussi utilisé pour éduquer les utilisateurs sur la régulation bien qu'à un niveau plus avancé, spécifiquement dans un milieu universitaire.
 
 \begin{figure}[H]
     \centering
