--- a/CalculPre.tex
+++ b/CalculPre.tex
@@ -32,10 +32,10 @@ que le moteur doit appliquer pour atteindre l'accélération voulue en utilisant
     F = m \cdot a = 0.85 \cdot 30 = 25.5~N
 \end{equation}
 
-Le moteur choisi devra appliquer une force d'au moins 25.5N pour pouvoir obtenir l'accélération recherchée sur le pendule.\\
+Le moteur choisi devra appliquer une force d'au moins 25.5~N pour pouvoir obtenir l'accélération recherchée sur le pendule.\\
 
 On peut aussi vérifier que la course du moteur est suffisante pour atteindre la vitesse maximale du système. On ne peut accélérer que sur la
-moitié de la course car il faut décélérer sur la deuxième moitié afin d'éviter les impacts. On obtient donc les formules suivantes:
+moitié de la course, car il faut décélérer sur la deuxième moitié afin d'éviter les impacts. On obtient donc les formules suivantes:
 
 \begin{align}\label{eq:TempsMouv}
     \begin{split}
