--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,7 +1,9 @@
 
+Le développement de la partie mécanique, incluant guidage, motorisation et capteurs, a été réalisée lors de cette première partie de projet.
+La partie électrique pour l'alimentation du système et sa commande a aussi été développée pendant ce temps. Une grande quantité de pièces
+ont été commandées chez différents fabricants pour pouvoir construire ce projet. Ceci a requis du temps pour trouver et négocier des offres
+avec un prix et des temps de livraisons raisonnables pour rester dans le cadre du travail de Bachelor. D'autres pièces ont été développées
+personnellement et seront fabriquées par l'école.\\
 
-\vfil
-\hspace{8cm}\makeatletter\@author\makeatother\par
-\hspace{8cm}\begin{minipage}{5cm}
-    
-\end{minipage}
+Les étapes restantes à effectuer pendant la seconde partie du \acrshort{TB} sont: l'assemblage de tous les éléments commandés pour avoir un
+système fonctionnel, la programmation de la commande \gls{PID} et les tests sur le fonctionnement du système.
