--- a/glossary.tex
+++ b/glossary.tex
@@ -1,21 +1,26 @@
 \newglossaryentry{heig-vd}{
-    name=HEIG-VD,
-    description={Haute École d'Ingénierie et de Gestion du canton de Vaud}
+  name=HEIG-VD,
+  description={Haute École d'Ingénierie et de Gestion du canton de Vaud}
 }
 \newglossaryentry{hes-so}{
-    name=HES-SO,
-    description={Haute École Supérieure de Suisse Occidentale}
+  name=HES-SO,
+  description={Haute École Supérieure de Suisse Occidentale}
 }
 \newglossaryentry{latex}{
-    name=latex,
-    description={Un langage et un système de composition de documents}
+  name=latex,
+  description={Un langage et un système de composition de documents}
 }
 \newglossaryentry{glider}{
-    name=glider,
-    description={Partie mobile du moteur linéaire}
+  name=glider,
+  description={Partie mobile du moteur linéaire}
 }
 
 \newglossaryentry{contact Reed}{
-    name=contact Reed,
-    description={Type de contacteur à languette, les champs magnétique font bouger la languette permettant de faire ou d'enlever le contact}
+  name=contact Reed,
+  description={Type de contacteur à languette, les champs magnétique font bouger la languette permettant de faire ou d'enlever le contact}
+}
+
+\newglossaryentry{PID}{
+  name=PID,
+  description={Forme de régulation qui utilise des commandes proportionnelle, dérivée et intégrée pour réguler une variable}
 }
