--- a/introduction.tex
+++ b/introduction.tex
@@ -3,7 +3,7 @@ Rien ne représente mieux la régulation qu'un pendule inverse. L'objectif princ
 afin de pouvoir l'expliquer facilement. Le projet est très complet dans le sens où plusieurs domaines vont être nécessaire pour en venir
 à bout. Il y a du développement mécanique avec la structure qui permet le maintient ainsi que le déplacement horizontal du système.
 Il y a de la programmation pour pouvoir déplacer le système afin qu'il reste en équilibre et ce malgré des perturbations, grâce à la
-régulation PID. Il y a aussi une partie d'électricité avec la mise en place d'un boîtier d'alimentation électrique fonctionnant avec une
+régulation \gls{PID}. Il y a aussi une partie d'électricité avec la mise en place d'un boîtier d'alimentation électrique fonctionnant avec une
 prise électrique classique de 230V.\\
 
 Le projet abouti est une structure du pendule entièrement assemblée qui peut connaître sa position linéaire et angulaire, être commandé
@@ -12,4 +12,4 @@ en déplacement horizontal et peut maintenir la position d'équilibre instable d
 \section{Contexte}
 C'est l'\acrlong{iAi} qui a proposé de fabriquer un pendule inversé dans le cadre d'un travail
 de Bachelor. Le pendule pourra être utilisé par la suite comme exemple de régulation lors d'événements servant à présenter l'\acrshort{Heig}.
-Dans ce but là, une place en C26 a été mise à disposition pour travailler et un budget de maximum 10'000 CHF est utilisable.
+Dans ce but-là, une place en C26 a été mise à disposition pour travailler et un budget de maximum 10'000 CHF est utilisable.
