--- a/report.tex
+++ b/report.tex
@@ -74,6 +74,12 @@
 \chapter{Liste de matériel}
 \input{ListeMateriel.tex}
 
+\chapter{Conclusion}
+\input{conclusion.tex}
+
+\chapter*{Remerciements}
+\input{Remerciement.tex}
+
 \clearpage
 \printbibliography
 
