--- a/Annexes.tex
+++ b/Annexes.tex
@@ -50,10 +50,10 @@
 \newline \textbf{Mise en plan du support des pieds}
 \newline \textbf{Mise en plan du support de la tête de lecture}
 
-\iftrue
+\iffalse
 
   %Planning
-  \includepdf[pages=-]{Annexes/2022-03-28 Planning.pdf}
+  \includepdf[pages=-,landscape=true]{Annexes/2022-03-28 Planning.pdf}
 
   %Anneau de LEDs
   \includepdf[pages=-]{Annexes/anneau de Led.pdf}
@@ -87,14 +87,14 @@
   \includepdf[pages=-]{Annexes/Pieds reglable}
 
   %Mises en plans des pièces mécaniques
-  \includepdf[pages=-]{Annexes/MEP Couplage Encodeur}
-  \includepdf[pages=-]{Annexes/MEP Couplage Tige}
-  \includepdf[pages=-]{Annexes/MEP Liaison chariot}
-  \includepdf[pages=-]{Annexes/MEP Liaison Moteur}
-  \includepdf[pages=-]{Annexes/MEP Support Amortisseur}
-  \includepdf[pages=-]{Annexes/MEP Support Amortisseur 2}
-  \includepdf[pages=-]{Annexes/MEP Support Guidage Cable}
-  \includepdf[pages=-]{Annexes/MEP Support Pieds}
-  \includepdf[pages=-]{Annexes/MEP Support Tete Lecture}
+  \includepdf[pages=-,landscape=true]{Annexes/MEP Couplage Encodeur}
+  \includepdf[pages=-,landscape=true]{Annexes/MEP Couplage Tige}
+  \includepdf[pages=-,landscape=true]{Annexes/MEP Liaison chariot}
+  \includepdf[pages=-,landscape=true]{Annexes/MEP Liaison Moteur}
+  \includepdf[pages=-,landscape=true]{Annexes/MEP Support Amortisseur}
+  \includepdf[pages=-,landscape=true]{Annexes/MEP Support Amortisseur 2}
+  \includepdf[pages=-,landscape=true]{Annexes/MEP Support Guidage Cable}
+  \includepdf[pages=-,landscape=true]{Annexes/MEP Support Pieds}
+  \includepdf[pages=-,landscape=true]{Annexes/MEP Support Tete Lecture}
 
 \fi
