--- a/ListeMateriel.tex
+++ b/ListeMateriel.tex
@@ -30,6 +30,7 @@
             Support ruban          & 311131-09                        & Heidenhain \cite{Heidenhain}    & 177                        & 1                 \\ \hline
             Encodeur               & TMCS-20                          & Trinamic \cite{Trinamic}        & 90                         & (1)               \\ \hline
             Roulement              & SKF W 61700 X-2RS1               & SKF \cite{SKF}                  & -                          & 2                 \\ \hline
+            Anneau de LEDs         & NeoPixel Ring 12x RGBW LEDs      & Adafruit \cite{Adafruit}        & 10                         & 1                 \\ \hline
             Boîtier électrique     & ABS 200/100 HG                   & Fibox \cite{Fibox}              & 51                         & 1                 \\ \hline
             Rail DIN               & MIV 20 DIN-35 255~mm             & Fibox \cite{Fibox}              & 6                          & 1                 \\ \hline
             Plaque de montage      & MIV 200                          & Fibox \cite{Fibox}              & 7                          & 1                 \\ \hline
@@ -40,7 +41,7 @@
             Bouton                 & 82-5151.1134.B001                & EAO \cite{EAO}                  & 35                         & 1                 \\ \hline
             Contrôleur moteur      & EPOS4 Compact 50/15              & Maxon \cite{Maxon}              & 660                        & (1)               \\ \hline
             Carte microcontrôleur  & Raspberry Pi 4                   & Raspberry Pi \cite{RaspberryPi} & -                          & (1)               \\ \hline
-            \textbf{Total dépensé} & -                                & -                               & \textbf{2790}\footnotemark & -                 \\ \hline
+            \textbf{Total dépensé} & -                                & -                               & \textbf{2800}\footnotemark & -                 \\ \hline
         \end{tabular}%
     }
 \end{table}
