--- a/bibliography.bib
+++ b/bibliography.bib
@@ -150,6 +150,14 @@
   keywords = {Trinamic}
 }
 
+@online{Adafruit,
+  author   = {Adafruit},
+  title    = {Adafruit},
+  url      = {https://www.adafruit.com/},
+  addendum = {(accessed: 20.06.2023)},
+  keywords = {Adafruit}
+}
+
 @online{Maxon,
   author   = {Maxon},
   title    = {Maxon},
