Changed images to svg

--- a/CahierDesCharges.tex
+++ b/CahierDesCharges.tex
@@ -4,7 +4,7 @@ Il convient de développer, assembler et faire fonctionner la maquette du pendul
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width = 0.5\textwidth]{assets/figures/IllustrationPendule.png}
+    \includegraphics[width = 0.5\textwidth]{assets/figures/IllustrationPendule.svg.pdf}
     \caption{Illustration du pendule inversé demandé}
     \label{fig:Illustration}
 \end{figure}
@@ -15,7 +15,7 @@ La figure \ref{fig:CasUtil} illustre ce cas d'utilisation typique.
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width = 0.7\textwidth]{assets/figures/CasUtil.png}
+    \includegraphics[width = 0.7\textwidth]{assets/figures/CasUtil.drawio.svg}
     \caption{Cas d'utilisation typique  du système à concevoir}
     \label{fig:CasUtil}
 \end{figure}
@@ -80,7 +80,7 @@ Les fonctions sont disposées dans un diagramme FAST (c.f. Figure \ref{fig:AnalF
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width = \textwidth]{assets/figures/AnalyseFAST.png}
+    \includegraphics[width = \textwidth]{assets/figures/AnalyseFAST.svg}
     \caption{Analyse FAST pour le pendule inversé}
     \label{fig:AnalFAST}
 \end{figure}
@@ -140,8 +140,9 @@ Ce genre de système n'est pas limité à un rail comme dans le projet courant. 
 
 \subsection{Pendule inversé}
 
-Faire un pendule inversé est un exercice classique de régulation de système ce qui explique la grande variété de projets de ce type que l'on peut trouver.
-Le suivant est un projet Instructables avec des éléments assez simples et peu chers visant à construire un pendule basique pour introduire la régulation.
+Plusieurs projets de pendule inversé sont trouvables sur internet comme les deux suivants que je vais montrer.
+Le premier est un projet Instructables avec des éléments assez simples et peu chers visant à construire un pendule basique
+pour introduire la régulation.
 
 \begin{figure}[H]
     \centering
