--- a/Mecanique.tex
+++ b/Mecanique.tex
@@ -11,7 +11,7 @@ le dessous de la pièce avec quatre taraudages M5. Un rebord pour l'indexage ave
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = 0.4\textwidth]{assets/figures/LiaisonChariot.png}
+  \includegraphics[width = 0.5\textwidth]{assets/figures/LiaisonChariot.svg}
   \caption{Représentation de la pièce de liaison du chariot}
   \label{fig:LiaisonChariot}
 \end{figure}
@@ -23,7 +23,7 @@ alors que deux trous taraudés sont utilisés pour fixer la chaîne porte-câble
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = 0.4\textwidth]{assets/figures/LiaisonMoteur.png}
+  \includegraphics[width = 0.5\textwidth]{assets/figures/LiaisonMoteur.svg}
   \caption{Représentation de la pièce de liaison du moteur}
   \label{fig:LiaisonMoteur}
 \end{figure}
@@ -32,7 +32,7 @@ L'assemblage de ces pièces entre elles et avec leur liaisons directes donne la 
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = 0.8\textwidth]{assets/figures/AssemblageGuidageEntrainement.png}
+  \includegraphics[width = 0.8\textwidth]{assets/figures/AssemblageGuidageEntrainement.svg}
   \caption{Représentation de l'assemblage des pièces de guidage et d'entrainement du système}
   \label{fig:AssGuiEntr}
 \end{figure}
@@ -44,7 +44,7 @@ pour faire le réglage en position de la tête. La pièce obtenue est la suivant
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = 0.4\textwidth]{assets/figures/SupportTeteLecture.png}
+  \includegraphics[width = 0.4\textwidth]{assets/figures/SupportTeteLecture.svg}
   \caption{Représentation du support de tête de lecture}
   \label{fig:SupTeteLect}
 \end{figure}
@@ -53,15 +53,16 @@ Voici une représentation avec le support monté sur la liaison au moteur et ave
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = 0.6\textwidth]{assets/figures/AssemblageMesureLineaire.png}
+  \includegraphics[width = 0.6\textwidth]{assets/figures/AssemblageMesureLineaire.svg}
   \caption{Représentation du support de tête de lecture assemblée avec les pièces proches dans le système}
   \label{fig:AssMesLin}
 \end{figure}
 
 \section{Support fin de course}\label{sec:SupFinCourse}
 Les capteurs de fins de course seront placés à l'arrière de la structure de chaque côté du système. Ces capteurs se fixent dans des rainures et
-il faut un petit support pour pouvoir tenir le capteur et l'accrocher au système avec une vis d'où le lamage M3 nécessaire. Dans ce cas-ci, le support ne subit pas d'effort particulier
-ce qui veut dire qu'il peut être fait en \acrshort{PLA} par impression 3D. Voici à quoi ressemble cette pièce.
+il faut un petit support pour pouvoir tenir le capteur et l'accrocher au système avec une vis d'où le lamage M3 nécessaire. Dans ce cas-ci, le
+support ne subit pas d'efforts particulier ce qui veut dire qu'il peut être fait en \acrshort{PLA} par impression 3D. Voici à quoi ressemble
+cette pièce.
 
 \begin{figure}[H]
   \centering
@@ -77,7 +78,7 @@ les chocs. Un trou taraudé M10 est nécessaire pour fixer l'amortisseur et deux
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = 0.3\textwidth]{assets/figures/SupportAmortisseur.png}
+  \includegraphics[width = 0.2\textwidth]{assets/figures/SupportAmortisseur.svg}
   \caption{Représentation du support de l'amortisseur}
   \label{fig:SupAmort}
 \end{figure}
@@ -86,7 +87,7 @@ Le placement des supports de l'amortisseur et du fin de course sur un des côté
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = 0.8\textwidth]{assets/figures/PlacementSupports.png}
+  \includegraphics[width = 0.8\textwidth]{assets/figures/PlacementSupports.svg}
   \caption{Représentation du placement des supports de fin de course et de l'amortisseur pour un côté}
   \label{fig:PlaceSup}
 \end{figure}
@@ -98,9 +99,16 @@ quatre taraudages M2. Voici à quoi elle ressemble.
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = 0.9\textwidth]{assets/figures/CouplageEncodeur.png}
+  \includegraphics[width = 0.9\textwidth]{assets/figures/CouplageEncodeur.svg}
   \caption{Représentation du couplage à l'encodeur}
   \label{fig:CouplEnco}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width = 0.3\textwidth]{assets/figures/CouplageEncodeur2.svg}
+  \caption{Représentation du couplage à l'encodeur}
+  \label{fig:CouplEnco2}
 \end{figure}
 
 La pièce de couplage à la tige qui est attachée à celle montrée sur la figure \ref{fig:CouplEnco} est en \acrshort{PC}. Elle possède donc quatre
@@ -109,7 +117,7 @@ La pièce ressemble à ceci.
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = 0.9\textwidth]{assets/figures/CouplageTige.png}
+  \includegraphics[width = 0.9\textwidth]{assets/figures/CouplageTige.svg}
   \caption{Représentation du couplage à la tige}
   \label{fig:CouplTige}
 \end{figure}
@@ -122,7 +130,7 @@ L'assemblage de ces différentes pièces ainsi que de la liaison au chariot et l
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = 0.7\textwidth]{assets/figures/AssemblagePartieTournante.png}
+  \includegraphics[width = 0.7\textwidth]{assets/figures/AssemblagePartieTournante.svg}
   \caption{Représentation de l'assemblage des parties tournantes et leurs connections directes}
   \label{fig:AssPartieTour}
 \end{figure}
@@ -132,12 +140,13 @@ L'assemblage de ces différentes pièces ainsi que de la liaison au chariot et l
 La chaîne porte-câbles est fixée d'un côté à la liaison moteur comme précisé plus haut au chapitre \ref{sec:LiaisonMotGlid}. L'autre côté est
 attaché au support pour chaîne porte-câbles qui est lui-même fixé sur un profilé. Deux passages de vis M4 sont présents pour la fixation sur
 le profilé ainsi que deux autres passages de vis M6 pour la fixation de la chaîne. Il y a aussi un dégagement de matière afin de pouvoir faire
-passer les câbles qui sortent de la chaîne et qui continuent plus bas vers le boîtier électrique. Cette pièce est fabriquée en tôle pliée et
-nécessite un alliage d'aluminium différent, l'aluminium EN-AW 5052. Voici une image du support pour la chaîne.
+passer les câbles qui sortent de la chaîne et qui continuent plus bas vers le boîtier électrique. Cette pièce est fabriquée en tôle pliée de
+2~mm d'épaisseur et nécessite un alliage d'aluminium différent, l'aluminium EN-AW 5052. Cette pièce fait 40~mm par 40~mm par 50~mm.
+Voici une image du support pour la chaîne.
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = 0.4\textwidth]{assets/figures/SupportChaineCable.png}
+  \includegraphics[width = 0.4\textwidth]{assets/figures/SupportChaineCable.svg}
   \caption{Représentation du support pour la chaîne porte-câbles}
   \label{fig:SupChaineCable}
 \end{figure}
@@ -149,7 +158,7 @@ passent par cet endroit donc il faut découper une zone de passage pour ces piè
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = \textwidth]{assets/figures/PlaquePassageMoteur.png}
+  \includegraphics[width = \textwidth]{assets/figures/PlaquePassageMoteur.svg}
   \caption{Représentation de la plaque centrale}
   \label{fig:PLaPassMot}
 \end{figure}
@@ -159,14 +168,14 @@ Enfin, voici l'assemblage de toutes les pièces mécaniques fabriquées avec la 
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = \textwidth]{assets/figures/AssemblageCompletFace.png}
+  \includegraphics[width = \textwidth]{assets/figures/AssemblageCompletFace.svg}
   \caption{Représentation de l'assemblage mécanique complet vu de face}
   \label{fig:AssCompFace}
 \end{figure}
 
 \begin{figure}[H]
   \centering
-  \includegraphics[width = \textwidth]{assets/figures/AssemblageCompletDerriere.png}
+  \includegraphics[width = \textwidth]{assets/figures/AssemblageCompletDerriere.svg}
   \caption{Représentation de l'assemblage mécanique complet vu de derrière}
   \label{fig:AssCompDerriere}
 \end{figure}
