--- a/introduction.tex
+++ b/introduction.tex
@@ -1,10 +1,14 @@
 %Introduction
-Rien ne représente mieux la régulation qu'un pendule inverse. L'objectif principal est d'avoir une maquette qui illustre la régulation
-afin de pouvoir l'expliquer facilement. Le projet est très complet dans le sens où plusieurs domaines vont être nécessaire pour en venir
-à bout. Il y a du développement mécanique avec la structure qui permet le maintient ainsi que le déplacement horizontal du système.
-Il y a de la programmation pour pouvoir déplacer le système afin qu'il reste en équilibre et ce malgré des perturbations, grâce à la
-régulation \gls{PID}. Il y a aussi une partie d'électricité avec la mise en place d'un boîtier d'alimentation électrique fonctionnant avec une
-prise électrique classique de 230V.\\
+Un pendule inversé est un système instable qui vise à maintenir une tige dans sa position d'équilibre instable, c'est à dire à la verticale
+maintenue par le bas. Sans un système pour maintenir cette position, la moindre déviation par rapport à la position d'équilibre instable va
+précipiter le système vers sa position d'équilibre stable, c'est à dire à la verticale maintenue par le haut. La régulation du système va
+permettre de maintenir la position d'équilibre instable à l'aide du contrôle d'un élément du système. Il existe différents éléments qui sont
+contrôlables pour maintenir la position d'équilibre instable du pendule, mais dans le cas de ce projet, un déplacement horizontal de la base
+sera utilisé. L'objectif principal est d'avoir une maquette qui illustre la régulation afin de pouvoir l'expliquer facilement. Le projet est
+très complet dans le sens où plusieurs domaines vont être nécessaire pour en venir à bout. Il y a du développement mécanique avec la structure
+qui permet le maintient ainsi que le déplacement horizontal du système. Il y a de la programmation pour pouvoir déplacer le système afin qu'il
+reste en équilibre et ce malgré des perturbations, grâce à la régulation \gls{PID}. Il y a aussi une partie d'électricité avec la mise en place
+d'un boîtier d'alimentation électrique fonctionnant avec une prise électrique classique de 230V.\\
 
 Le projet abouti est une structure du pendule entièrement assemblée qui peut connaître sa position linéaire et angulaire, être commandé
 en déplacement horizontal et peut maintenir la position d'équilibre instable de la tige au centre du système.
