--- a/report.tex
+++ b/report.tex
@@ -59,6 +59,9 @@
 \chapter{Cahier des charges fonctionnel}
 \input{CahierDesCharges.tex}
 
+\chapter{Structure préliminaire}
+\input{StructurePre.tex}
+
 \chapter{Calculs préliminaires}
 \input{CalculPre.tex}
 
@@ -90,8 +93,6 @@
 \appendixpage
 \addappheadtotoc
 
-\input{Annexes.tex}
-
 \let\cleardoublepage\clearpage
 \backmatter
 
@@ -99,6 +100,8 @@
 \printnoidxglossary
 \label{index}
 \printindex
+
+\input{Annexes.tex}
 
 % Le colophon est le dernier élément d'un document qui contient des notes de l'auteur concernant la mise en page et l'édition du document : il est parfaitement optionnel.
 \input{colophon.tex}
