--- a/BoitierElectrique.tex
+++ b/BoitierElectrique.tex
@@ -30,7 +30,7 @@ ces connections sur le schéma suivant.
       Convertisseur AC-DC 48V    & DRC100US48          & XP Power \cite{XPPower}         & 93               & 70               & 58                  \\ \hline
       Convertisseur DC-DC 48V-5V & DDR-15L-5           & MEAN WELL \cite{MEANWELL}       & 90               & 17.5             & 54.5                \\ \hline
       Contrôleur moteur          & EPOS4 Compact 50/15 & Maxon \cite{Maxon}              & 65.5             & 59.5             & 35                  \\ \hline
-      Carte de commande          & Raspberry Pi 4      & Raspberry Pi \cite{RaspberryPi} & 85               & 56               & -                   \\ \hline
+      Carte de commande          & Raspberry Pi 4      & Raspberry Pi \cite{RaspberryPi} & 85               & 56               & 30                  \\ \hline
       Connecteur fiche 230V      & C14                 & Schurter \cite{Schurter}        & -                & -                & -                   \\ \hline
       Bouton arrêt d'urgence     & AB6E-3BV02PTRH      & IDEC \cite{IDEC}                & -                & -                & -                   \\ \hline
       Bouton poussoir            & 82-5151.1134.B001   & EAO \cite{EAO}                  & -                & -                & -                   \\ \hline
@@ -41,6 +41,13 @@ ces connections sur le schéma suivant.
 La somme des largeurs des éléments est de 203~mm, la hauteur la plus grande est de 93~mm et la profondeur la plus élevée est de 58~mm. Le choix
 du boîtier se porte sur l'ABS 200/100 HG ENCLOSURE de chez Fibox \cite{Fibox} avec 171~mm de hauteur interne, 95~mm de profondeur interne et
 246~mm de largeur interne. Avec il y aussi la plaque de montage MIV 200 MOUNTING PLATE et le rail MIV 20 DIN-35 RAIL aussi de chez Fibox \cite{Fibox}.
+Les connections entre les éléments externes et internes au boîtier doivent être faites de manière à ce qu l'on puisse déconnecter les éléments
+externes et retirer le boîtier sans avoir à démonter le reste du système. À cette fin, plusieurs connecteurs sont utilisés pour faire l'interface
+entre l'intérieur et l'extérieur du boîtier et, pour les éléments ne possédant que 2 ou 3 fils minces qui ne nécessitent pas un connecteur
+individuel, des presses étoupes sont utilisés comme passage de câbles. Ces câbles là viennent se fixer sur un bornier de 25~mm de large situé
+sur le rail DIN35. L'ajout d'un bornier sur le rail prend cependant trop de place avec la configuration actuelle des autres composants, c'est
+donc pour cela que la décision de venir fixer la carte RaspberryPi sur son côté a été prise. Ainsi, la place gagnée en changeant la position du
+RaspberryPi est de 26~mm et la place utilisée par le bornier est de 25~mm. L'espace dans le boîtier est donc toujours suffisant.
 L'assemblage de ces pièces ressemble à ceci.
 
 \begin{figure}[H]
