--- a/abstract.tex
+++ b/abstract.tex
@@ -1,21 +1,13 @@
 % Résumé du projet
-Ce projet porte sur la fabrication et la programmation d'un pendule inverse. Celui-ci doit être assemblé avec les demandes
-suivantes:
-\begin{itemize}
-    \item La structure principale est faite de profilés en aluminium.
-    \item Un moteur linéaire sans coeur en fer est utilisé pour entrainer le système avec le moins de frottements possible.
-    \item La tige du pendule est illuminée par des leds.
-\end{itemize}
+Ce projet porte sur la fabrication et la programmation d'un pendule inverse. Celui-ci doit être assemblé en suivant des directives précises.
+Tout d'abord, la structure principale doit être faite de profilés en aluminium. Ensuite, un moteur linéaire sans coeur en fer est utilisé pour
+entrainer le système avec le moins de frottements possible. Enfin, la tige du pendule doit être illuminée par des leds.\\
 
 La programmation, elle, sera faite à l'aide de boucles de régulations \gls{PID}. Ces dernières permettront de maintenir la tige du pendule
 en équilibre instable ainsi qu'au centre de la structure.\\
 
-Le travail à fournir est donc le suivant:
-\begin{itemize}
-    \item Développement de la structure en profilé.
-    \item Création de l'entraînement mécanique du système avec guidage.
-    \item Mise en place de la mesure de position linéaire du pendule ainsi que de la position angulaire de la tige.
-    \item Création d'un boîtier d'alimentation électrique permettant au système de fonctionner avec une prise 230~V classique.
-    \item Commande et assemblage des différentes pièces nécessaire du système.
-    \item Programmation des boucles de régulations du pendule.
-\end{itemize}
+Le travail à fournir pendant la durée de ce travail de Bachelor comporte plusieurs étapes clés. Tout d'abord, le développement de la structure
+en profilé et la création de l'entraînement mécanique du système avec guidage. Ensuite, il faut mettre en place la mesure de position linéaire
+du pendule ainsi que de la position angulaire de la tige. Il faut aussi créer un boîtier d'alimentation électrique permettant au système de
+fonctionner avec une prise 230~V classique. Une fois l'assemblage complet bien défini, il faut passer à la commande et l'assemblage des
+différentes pièces nécessaire du système. Pour finir, il reste la programmation des boucles de régulations du pendule.
