--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,4 +1,4 @@
-\newacronym{Heig}{HEIG}{Haute École d'Ingénieurie et de Gestion}
+\newacronym{Heig}{HEIG-VD}{Haute École d'Ingénieurie et de Gestion de l'état de Vaud}
 \newacronym{TB}{TB}{Travail de Bachelor}
 \newacronym{iAi}{iAi}{Institut d'Automatisation Industrielle de la HEIG}
 \newacronym{PC}{PC}{Polycarbonate}
